solve overflow problem index page

--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -1,10 +1,12 @@
 .features {
-  max-width: 1400px;
-  margin: 0 auto;
+  margin-left: auto;
 }
 
 .features-section {
   margin-bottom: 45px;
+  max-width: 1255px;
+  overflow: hidden;
+
 
   .features-title {
     @include font(1.13rem, 1.37rem, 400);
@@ -26,7 +28,7 @@
   }
 
   @include media-breakpoint-up(lg) {
-    margin: 0 98px 120px 65px;
+    margin: 0 auto 120px;
 
     &:last-child {
       margin-bottom: 230px;
@@ -44,13 +46,13 @@
     @include media-breakpoint-up(sm) {
       width: 100vw;
     }
-
-    @include media-breakpoint-up(xl) {
-      width: auto;
-    }
-
   }
 
+
+  .features-title {
+    max-width: 1255px;
+    margin: 0 auto;
+  }
 
   .personnel-list {
     position: relative;
@@ -60,15 +62,10 @@
       display: none;
     }
 
-    @include media-breakpoint-up(xl) {
-      margin-right: -53px;
+    @include media-breakpoint-up(lg) {
       left: 0;
-      max-width: 843px;
-    }
-
-    @media (min-width: 1410px) {
-      max-width: 895px;
-      margin-right: 0;
+      width: 895px;
+      margin-right: -52px;
     }
   }
 }
