--- a/source/sass/components/accordion.scss
+++ b/source/sass/components/accordion.scss
@@ -149,7 +149,7 @@
   }
 
   @include media-breakpoint-up(lg) {
-    width: 742px;
+    width: 762px;
   }
 }
 
